--- a/style/imagens.css
+++ b/style/imagens.css
@@ -1,3 +1,52 @@
+#storyImg1{
+    background-image: url(https://photos.enjoei.com.br/public/255x255/czM6Ly9waG90b3MuZW5qb2VpLmNvbS5ici9jYXJkX2xpc3RfaXRlbXMvMjE4ODU3NDIvOGJkNTAzZWMyNmVlYWRhOWYxODQ0MGQyOGFhZWM3Y2EuSlBH);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
+}
+#storyImg2{
+    background-image: url(https://photos.enjoei.com.br/public/255x255/czM6Ly9waG90b3MuZW5qb2VpLmNvbS5ici9jYXJkX2xpc3RfaXRlbXMvMjE4ODU3NDIvMWFlY2RmZjI2ODkwMDc2NDcxYmJiNzZjODQwNTU5YzQucG5n);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
+}
+#storyImg3{
+    background-image: url(https://photos.enjoei.com.br/public/255x255/czM6Ly9waG90b3MuZW5qb2VpLmNvbS5ici9jYXJkX2xpc3RfaXRlbXMvMjE4ODU3NDIvMmUwZDkzOWVkMTg5MGMyOWM5N2YzNGM4YmNiODQwZmUucG5n);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
+}
+#storyImg4{
+    background-image: url(https://photos.enjoei.com.br/public/255x255/czM6Ly9waG90b3MuZW5qb2VpLmNvbS5ici9jYXJkX2xpc3RfaXRlbXMvMjE4ODU3NDIvODczYmNjMzc4OWRmMDBjMzQxZWNhODZhNzk3MmNhNGEuSlBH);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
+}
+#storyImg5{
+    background-image: url(https://photos.enjoei.com.br/public/255x255/czM6Ly9waG90b3MuZW5qb2VpLmNvbS5ici9jYXJkX2xpc3RfaXRlbXMvNDcxOTI5L2ZhNmExYjhlYWVjNzc4OGVlOWEzNjA1OTgyM2U5ODIwLmpwZw);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
+}
+#storyImg6{
+    background-image: url(https://photos.enjoei.com.br/public/255x255/czM6Ly9waG90b3MuZW5qb2VpLmNvbS5ici9jYXJkX2xpc3RfaXRlbXMvMjE4ODU3NDIvYzQwNTU1NGM5MDVkYzQ3ZjkxNzg3ZTFjOTlhZGVkMzguanBn);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
+}
+#storyImg7{
+    background-image: url(https://photos.enjoei.com.br/public/255x255/czM6Ly9waG90b3MuZW5qb2VpLmNvbS5ici9jYXJkX2xpc3RfaXRlbXMvMjE4ODU3NDIvZWI5YzllNTgyYzg1YTQwYWNhNjVkMTg0YTUyZDZmZWEucG5n);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
+}
+#storyImg8{
+    background-image: url(https://photos.enjoei.com.br/public/255x255/czM6Ly9waG90b3MuZW5qb2VpLmNvbS5ici9jYXJkX2xpc3RfaXRlbXMvMzkxOTIxLzViZGIxN2YxNjllMTNkNDUxYmI5ODRkZmNhZjZlNGQ4LmpwZw);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
+}
+
 /*Side Bar*/
 
 
