--- a/style/headerBar.css
+++ b/style/headerBar.css
@@ -1,9 +1,12 @@
 .headerBar{
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 54px;
     border: 1px solid #DBDBDB;
     display: flex;
     justify-content: center;
+    background-color: white;
 }
 .headerBarSize{
     display: flex;
