--- a/style/headerBar.css
+++ b/style/headerBar.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     background-color: white;
+    z-index: 2;
 }
 .headerBarSize{
     display: flex;
@@ -27,6 +28,7 @@
 }
 .headerBarSize .homeIcons ion-icon{
     font-size: 22px;
+    cursor: pointer;
 }
 .headerBarSize .homeIcons div{
     display: flex;
@@ -42,6 +44,7 @@
 .headerBarSize .homeIcons img{
     height: 29px;
     width: 103px;
+    cursor: pointer;
 }/* input */
 .instagramInput input{
     width: 215px;
@@ -56,6 +59,7 @@
     align-items: center;
     text-align: center;
     letter-spacing: 0.1px;
+    cursor: pointer;
 }/**/
 .rightIcons{
     display: flex;
@@ -64,6 +68,7 @@
 .rightIcons ion-icon{
     font-size: 22px;
     margin-left: 24px;
+    cursor: pointer;
 }/**/
 @media (max-width:614px) {
     .headerBarSize .homeIcons div hr{
