--- a/style/mainContentGrid.css
+++ b/style/mainContentGrid.css
@@ -1,5 +1,5 @@
 .mainContentGrid{
-    margin-top: 34px;
+    margin-top: calc(54px + 34px);
     display: grid;
     grid-template-columns: 1fr 614px 293px 1fr;
     grid-template-areas: ". mainContent sideBar .";
@@ -7,7 +7,7 @@
 }
 @media (max-width:614px) {
     .mainContentGrid{
-        margin-top: 0px;
+        margin-top: 54px;
     }
 }
 .mainContentGrid .mainContent{
