--- a/style/stories.css
+++ b/style/stories.css
@@ -5,6 +5,8 @@
     background: #FFFFFF;
     border: 1px solid #DBDBDB;
     border-radius: 3px;
+    overflow-block:auto;
+    overflow-x: hidden;
 }
 @media (max-width:614px) {
     .stories{
@@ -24,6 +26,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+    cursor: pointer;
 }
 #storiesSize div img:nth-child(1){
     width: 66px;
