--- a/style/mainContentGrid.css
+++ b/style/mainContentGrid.css
@@ -14,6 +14,7 @@
     grid-area: mainContent;
 }
 .mainContentGrid .sideBar{
+    position: sticky;
     grid-area: sideBar;
 }
 @media (max-width:976px) {
