--- a/style/feed.css
+++ b/style/feed.css
@@ -68,6 +68,15 @@
     display: flex;
     justify-content: space-between;
 }
+.postCardButtons div{
+    display: flex;
+    align-items: center;
+}
+.postCardButtons div img{
+    height: 19px;
+    width: 19px;
+    margin-right: 15px;
+}
 .postCardButtons div:nth-child(1) ion-icon{
     margin-right: 16px;
 }
