--- a/style/feed.css
+++ b/style/feed.css
@@ -70,13 +70,14 @@
 }/**/
 .postCardFooter{
     width: 100%;
-    height: 71px;
-    padding: 13px 17px 15px 17px;
+    height: 76px;
+    padding: 12px 17px 16px 17px;
     box-sizing: border-box;
 }
 .postCardButtons{
     display: flex;
     justify-content: space-between;
+    height: 19px;
 }
 .postCardButtons div{
     display: flex;
@@ -89,6 +90,10 @@
 }
 .postCardButtons div:nth-child(1) ion-icon{
     margin-right: 16px;
+}
+.postCardButtons .bookMark{
+    height: 19px;
+    width: 19px;
 }
 .postCardButtons ion-icon{
     font-size: 18px;
