--- a/style/feed.css
+++ b/style/feed.css
@@ -11,7 +11,6 @@
     border: 1px solid #DBDBDB;
     border-radius: 3px;
     margin-bottom:60px;
-    width: 100%;
     height: min(749px, auto);
 }
 @media (max-width:530px) {
@@ -54,11 +53,11 @@
     cursor: pointer;
 }/*post*/
 .postContent{
-   width: min(612px, 100%); 
+   width: min(612px, 100vw); 
    height: min(612px, 100vw);
 }
 .postContent img{
-    width: min(612px, 100%); 
+    width: min(612px, 100vw); 
     height: min(612px, 100vw);
     object-fit: cover;
     object-position: center;
@@ -69,7 +68,6 @@
     object-fit: cover;
 }/**/
 .postCardFooter{
-    width: 100%;
     height: 76px;
     padding: 12px 17px 16px 17px;
     box-sizing: border-box;
@@ -101,7 +99,6 @@
 }/**/
 .postCardLikes{
     margin-top: 12px;
-    width: 100%;
     display: flex;
     align-items: center;
 }
