--- a/style/headerBar.css
+++ b/style/headerBar.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 935px;
+    width: min(935px, 100%);
     height: 100%;
 }
 @media (max-width:935px) {
