--- a/style/stories.css
+++ b/style/stories.css
@@ -1,6 +1,6 @@
 .stories{
     display: block;
-    width: 614px;
+    width: min(100%, 614px);
     height: 118px;
     background: #FFFFFF;
     border: 1px solid #DBDBDB;
