--- a/style/reset.css
+++ b/style/reset.css
@@ -23,6 +23,10 @@ time, mark, audio, video {
 	BlinkMacSystemFont,'Segoe UI', Roboto, Oxygen, Ubuntu,
 	Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+ion-icon:hover{
+    color: rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+}
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
