all done. more a project is made

--- a/style/stories.css
+++ b/style/stories.css
@@ -1,5 +1,6 @@
 .stories{
-    display: block;
+    position: relative;
+    display: flex;
     width: min(100%, 614px);
     height: 118px;
     background: #FFFFFF;
@@ -11,7 +12,27 @@
 @media (max-width:614px) {
     .stories{
         background-color: #fafafa;
+        overflow-x: scroll;
     }
+}
+.floatingStorieButton{
+    position: absolute;
+    bottom: calc(50% - 13px);
+    right: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    box-shadow: -1px 1px 8px rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    border-radius: 16px;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+.stories ion-icon{
+    position: absolute;
+    font-size: 26px;
+    color: white;
 }
 .stories #storiesSize{
     height: 100%;
@@ -20,7 +41,8 @@
     align-items: center;
     margin-left: 18px;
     gap: 14px;
-}/**/
+}
+/**/
 #storiesSize div{
     display: flex;
     flex-direction: column;
